Added more content changes

--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -5,17 +5,24 @@ logfile=/var/log/supervisor/supervisord.log
 pidfile=/var/run/supervisord.pid
 
 
-# Ollama Server (Port 5001)
-[program:ollama-server]
-command=/usr/bin/ollama serve
-
-
-# TTS Server (Port 5002)
-[program:tts-server]
-command=tts-server --show_details
+# Frontend
+[program:frontend]
+command=next start --host 0.0.0.0 --port 1603
+directory=/app
 autostart=true
 autorestart=true
-startsecs=5
+redirect_stderr=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+
+# Backend
+[program:fastapi-tts]
+command=fastapi run main.py --host 0.0.0.0 --port 1602
+directory=/app
+autostart=true
+autorestart=true
 redirect_stderr=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
